--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,7 +50,7 @@
           window.open("", "_blank");
         };
         document.getElementById("card3").onclick = function () {
-          window.open("", "_blank");
+          window.open("https://discord.gg/U2eMHq8wck", "_blank");
         };
       </script>
 </body>
