--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,8 +28,8 @@
             </section>
             <section class="main">
                 <div class="projects">
-                    <button id="dev">Pamkoto</button>
-                    <button id="design">LevImpZ</button>
+                    <button id="dev" onclick="window.open('https://discord.gg/cTt9Jst3mk', '_blank')">Pamkoto</button>
+                    <button id="design" onclick="window.open('https://discord.gg/U2eMHq8wck', '_blank')">LevImpZ</button>
                     <button id="wpp" translate="no">Nothing Here</button>
                     <!--<button id="wpp" onclick="window.open('https://wa.me/', '_blank')">WhatsApp</button>-->
                 </div>
@@ -43,7 +43,7 @@
         document.getElementById("dev").onclick = function () {
           window.open("https://discord.gg/cTt9Jst3mk", "_blank");
         };
-        document.getElementById("dev").onclick = function () {
+        document.getElementById("design").onclick = function () {
           window.open("https://discord.gg/U2eMHq8wck", "_blank");
         };
         document.getElementById("wpp").onclick = function () {
