--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="app-header">
     <div id="border">
-        <img id="perfil" ngSrc="https://imgur.com/oJGct1b.png" width="38" height="38" style="border-radius: 10px;"/>
+        <img id="perfil" ngSrc="https://imgur.com/y2jccs5.png" width="38" height="38" style="border-radius: 10px;"/>
         <div class="texts">
             <h1 style="font-size: 18px;">Henrique Silva</h1>
             <h2 style="color: rgb(209, 209, 209); font-size: 11px;">Developer</h2>
