--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
                 <div class="projects">
                     <button id="dev" onclick="window.open('https://discord.gg/cTt9Jst3mk', '_blank')">Pamkoto</button>
                     <button id="design" onclick="window.open('https://discord.gg/U2eMHq8wck', '_blank')">LevImpZ</button>
-                    <button id="wpp" translate="no">Nothing Here</button>
+                    <button id="pl" translate="no" onclick="window.open('https://www.spigotmc.org/resources/authors/ihenriquezx.1881567', '_blank')">Free Minecraft Plugin's</button>
                     <!--<button id="wpp" onclick="window.open('https://wa.me/', '_blank')">WhatsApp</button>-->
                 </div>
             </section>
@@ -33,8 +33,8 @@
         document.getElementById("design").onclick = function () {
           window.open("https://discord.gg/U2eMHq8wck", "_blank");
         };
-        document.getElementById("wpp").onclick = function () {
-          window.open("https://wa.me/", "_blank");
+        document.getElementById("pl").onclick = function () {
+          window.open("https://www.spigotmc.org/resources/authors/ihenriquezx.1881567", "_blank");
         };
         document.getElementById("card1").onclick = function () {
           window.open("https://www.instagram.com/inovatozx", "_blank");
