--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <img id="perfil" ngSrc="https://imgur.com/IisFx51.png" width="38" height="38" style="border-radius: 10px;"/>
         <div class="texts">
             <h1 style="font-size: 18px;">Henrique Silva</h1>
-            <h2 style="color: rgb(209, 209, 209); font-size: 11px;">Developer</h2>
+            <h2 style="color: rgb(209, 209, 209); font-size: 11px;" translate="no">Developer</h2>
         </div>
         <img id="marca" src="https://imgur.com/unzdq22.png" alt="Marca">
     </div>
