--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -40,7 +40,7 @@ main {
 
 #dev:hover,
 #design:hover,
-#wpp:hover {
+#pl:hover {
     scale: 1.04;
     color: rgb(212, 212, 212);
     background-color: rgba(255, 0, 150, 0.5);
@@ -48,7 +48,7 @@ main {
 
 #dev:active,
 #design:active,
-#wpp:active {
+#pl:active {
     background-color: rgba(255, 0, 150, 0.5);
 }
 
